[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/mainThem.tres" type="Theme" id=1]
[ext_resource path="res://UI/WinScreen.gd" type="Script" id=2]

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 287.0
margin_top = 175.0
margin_right = 737.0
margin_bottom = 425.0
rect_min_size = Vector2( 450, 250 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 450.0
margin_bottom = 39.0
text = "WIN"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 43.0
margin_right = 450.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 223.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Time:"

[node name="TimeUsed" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 227.0
margin_right = 450.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "00:00:00"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 86.0
margin_right = 450.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 223.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Coins"

[node name="Coins" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 227.0
margin_right = 450.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "00:00:00"

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 129.0
margin_right = 450.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 223.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Secret"

[node name="Secret" type="Label" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 227.0
margin_right = 450.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "00:00:00"

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 450.0
margin_bottom = 217.0

[node name="NextButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer4"]
margin_right = 216.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Next Level"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer4"]
margin_left = 220.0
margin_right = 230.0
margin_bottom = 45.0
rect_min_size = Vector2( 10, 0 )

[node name="MainMenu" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer4"]
margin_left = 234.0
margin_right = 450.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "Menu"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer4/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer4/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
